@@ -1,11 +1,12 @@
 1.3.0 2009-??-??
 == ChangeLog ==
+ * PHP 5.3 Supported
  * fixed #138: no segv if cache is not initialized correctly
  * default to 64M for xcache.size in xcache.ini
  * could not show module info in admin page when XCache is the last module
  * wrong http auth realm
  * coverager: font-size and newline fix for firefox
- * PHP 5.3 Supported
+ * admin page is now magic quote gpc aware
 
 1.2.2 2007-12-29
 == ChangeLog ==
